# telegram-dynamic-nicknames

./: .env.sample  .gitignore  LICENSE.txt  README.md  pyproject.toml  start.sh
src/: app.py  config.py  emoji_parser.py  logger.py  nickname_generator.py  telegram_dynamic_nickname.py  tg_client.py
